# fr-pmx-factory

./: Cargo.toml  build.rs
proto/: channel_strip.proto  factory.proto  output_stage.proto
src/: client.rs  factory.rs  factory_service.rs  server.rs
src/factory/: channel_strip_factory.rs  utils.rs
